# authselect

./: .gitignore  Makefile.am  configure.ac  zanata-hooks.sh  zanata.xml
rpm/: authselect.spec.in
scripts/: manpages-build.sh.in
src/man/: Makefile.am  authselect-migration.7.adoc  authselect-profiles.5.adoc  authselect.8.adoc  build.sh.in
